// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`markdownReport > produces a stable filtered report with a filter-context header 1`] = `
"# Lightroom Catalog Analysis

- Total photos: 3,120
- Date range: 2022-01-01 – 2024-12-31
- Catalog version: Lightroom Classic v14

## Filter applied

- Date range: 2024-01-01 – 2024-12-31
- Cameras: Sony A7R V
- Ratings: 4, 5

## Year in Review

- Year: 2024
- Total photos: 1,240
- Days shot: 87
- Most-used body: Sony A7R V
- Most-used lens: 24-70mm f/2.8 GM
- Top focal length: 35mm
- Top aperture: f/2.8
- Most prolific month: 2024-08 (489)
- Avg shots / day: 14.3

## Year-to-Year

Biggest shift: totalPhotos in 2023 (+320 photos).

| Stat | 2022 | 2023 | 2024 |
| --- | --- | --- | --- |
| Total photos | 780 | 1,100 | 1,240 |
| Top body | Sony A7 III | Sony A7R V | Sony A7R V |

## Overview

- Total photos: 3,120
- Days shot: 223
- Photos / day: 14.0
- Bodies: 2 · Lenses: 5
- Top body: Sony A7R V · Top lens: 24-70mm f/2.8 GM
- Top focal length: 35mm

## Gear

| Lens | Photos |
| --- | --- |
| 24-70mm f/2.8 GM | 1,800 |
| 70-200mm f/2.8 GM | 720 |

Retired: Sony 28mm f/2 (2022-05)

## Focal Length

| Focal length | % of shots |
| --- | --- |
| 35mm | 22.0% |
| 70mm | 14.0% |

A 35mm prime would cover 47% of your shots within ±25%.

## Focal Length per Zoom

- 24-70mm f/2.8 GM: 62% of shots at 24mm

## Aperture Sweet Spot

- 24-70mm f/2.8 GM: shot wide open 71% of the time

## Time of Day

- GPS-located photos (sun-angle basis): 980
- Golden hour: 320 · Blue hour: 180 · Midday: 280 · Night: 200

## Shooting Heatmap

- Years covered: 2022, 2023, 2024
- Days with photos: 1

## GPS Locations

- % of catalog with GPS: 31% (980 photos)

| Region | Photos |
| --- | --- |
| United States | 320 |
| France | 110 |

## Curation Funnel

| Stage | Photos |
| --- | --- |
| Total | 3,120 |
| Not rejected | 2,980 |
| Rated ≥1★ | 2,100 |
| Rated ≥4★ | 780 |

## Edit Intensity

- Avg exposure shift: 0.42 stops
- Avg crop: 8.1%
- With local adjustments: 36% · With presets: 22%

## Ratings & Picks

| Rating | Photos |
| --- | --- |
| Rejected | 140 |
| 0★ | 1,980 |
| 1★ | 320 |
| 2★ | 180 |
| 3★ | 220 |
| 4★ | 180 |
| 5★ | 100 |

## Keyword Coverage

- Tagged: 2,200 · Untagged: 920
- Unique keywords: 184 · Avg / tagged photo: 3.4 · Orphans: 18

| Keyword | Photos |
| --- | --- |
| street | 480 |
| portrait | 320 |

## Burst Detection

- Total bursts: 240 · Photos in bursts: 1,020 (33%)
- Longest burst: 18
- Keeper rate in bursts: 8% vs 13% for single shots

## Period Comparison

_Period Comparison is interactive in the app and is not exported._

## Catalog Health

- Missing originals: 14 · Missing previews: 3
- Broken paths: 2 · Likely duplicates: 22

---
Generated by phototools.io/lightroom-catalog-analyzer. Your catalog was never uploaded — only these aggregated stats."
`;

exports[`markdownReport > produces a stable unfiltered report 1`] = `
"# Lightroom Catalog Analysis

- Total photos: 3,120
- Date range: 2022-01-01 – 2024-12-31
- Catalog version: Lightroom Classic v14

## Year in Review

- Year: 2024
- Total photos: 1,240
- Days shot: 87
- Most-used body: Sony A7R V
- Most-used lens: 24-70mm f/2.8 GM
- Top focal length: 35mm
- Top aperture: f/2.8
- Most prolific month: 2024-08 (489)
- Avg shots / day: 14.3

## Year-to-Year

Biggest shift: totalPhotos in 2023 (+320 photos).

| Stat | 2022 | 2023 | 2024 |
| --- | --- | --- | --- |
| Total photos | 780 | 1,100 | 1,240 |
| Top body | Sony A7 III | Sony A7R V | Sony A7R V |

## Overview

- Total photos: 3,120
- Days shot: 223
- Photos / day: 14.0
- Bodies: 2 · Lenses: 5
- Top body: Sony A7R V · Top lens: 24-70mm f/2.8 GM
- Top focal length: 35mm

## Gear

| Lens | Photos |
| --- | --- |
| 24-70mm f/2.8 GM | 1,800 |
| 70-200mm f/2.8 GM | 720 |

Retired: Sony 28mm f/2 (2022-05)

## Focal Length

| Focal length | % of shots |
| --- | --- |
| 35mm | 22.0% |
| 70mm | 14.0% |

A 35mm prime would cover 47% of your shots within ±25%.

## Focal Length per Zoom

- 24-70mm f/2.8 GM: 62% of shots at 24mm

## Aperture Sweet Spot

- 24-70mm f/2.8 GM: shot wide open 71% of the time

## Time of Day

- GPS-located photos (sun-angle basis): 980
- Golden hour: 320 · Blue hour: 180 · Midday: 280 · Night: 200

## Shooting Heatmap

- Years covered: 2022, 2023, 2024
- Days with photos: 1

## GPS Locations

- % of catalog with GPS: 31% (980 photos)

| Region | Photos |
| --- | --- |
| United States | 320 |
| France | 110 |

## Curation Funnel

| Stage | Photos |
| --- | --- |
| Total | 3,120 |
| Not rejected | 2,980 |
| Rated ≥1★ | 2,100 |
| Rated ≥4★ | 780 |

## Edit Intensity

- Avg exposure shift: 0.42 stops
- Avg crop: 8.1%
- With local adjustments: 36% · With presets: 22%

## Ratings & Picks

| Rating | Photos |
| --- | --- |
| Rejected | 140 |
| 0★ | 1,980 |
| 1★ | 320 |
| 2★ | 180 |
| 3★ | 220 |
| 4★ | 180 |
| 5★ | 100 |

## Keyword Coverage

- Tagged: 2,200 · Untagged: 920
- Unique keywords: 184 · Avg / tagged photo: 3.4 · Orphans: 18

| Keyword | Photos |
| --- | --- |
| street | 480 |
| portrait | 320 |

## Burst Detection

- Total bursts: 240 · Photos in bursts: 1,020 (33%)
- Longest burst: 18
- Keeper rate in bursts: 8% vs 13% for single shots

## Period Comparison

_Period Comparison is interactive in the app and is not exported._

## Catalog Health

- Missing originals: 14 · Missing previews: 3
- Broken paths: 2 · Likely duplicates: 22

---
Generated by phototools.io/lightroom-catalog-analyzer. Your catalog was never uploaded — only these aggregated stats."
`;
